--- a/style.css
+++ b/style.css
@@ -13,12 +13,17 @@ span{
     color:rgb(151, 33, 141);
 }
 nav ul li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     list-style-type: none;
     display: inline-block;
     margin: 10px 25px;
 }
+
+
 nav ul li a{
-    color: rgb(255, 255, 255);
+    
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
@@ -62,6 +67,11 @@ nav ul li a:hover::after{
 .bg-dark {
     background-color: #DFCCFB !important;
 }
+
+body {
+    background-color: #DFCCFB !important;
+}
+
 
 .card{
     background-color: #FFF3DA !important;
